[gd_scene load_steps=6 format=3 uid="uid://bc8kkfddm2kqx"]

[ext_resource type="Script" uid="uid://cm7ah0e8ujbm5" path="res://src/core/view/player/player_info_node.gd" id="1_w5k0l"]
[ext_resource type="Texture2D" uid="uid://butqpqs5pl8ij" path="res://assets/textures/test_art.png" id="2_w5k0l"]
[ext_resource type="Texture2D" uid="uid://b0ld8qmbplu5u" path="res://assets/textures/blank_red.png" id="3_4lvai"]
[ext_resource type="Texture2D" uid="uid://cy2uenr3inbdl" path="res://assets/textures/frame_gold.png" id="4_2ydvr"]
[ext_resource type="Texture2D" uid="uid://devdl03u1aa4p" path="res://assets/textures/blank_green.png" id="5_72kik"]

[node name="PlayerInfoNode" type="Control"]
physics_interpolation_mode = 0
layout_mode = 3
anchors_preset = 0
offset_right = 129.0
offset_bottom = 180.0
script = ExtResource("1_w5k0l")
metadata/_custom_type_script = "uid://cm7ah0e8ujbm5"

[node name="FaceTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w5k0l")
expand_mode = 4
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 43)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.199632, 0.0864504, 0.00742775, 0.8)

[node name="NickName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.888889
anchor_right = 1.0
anchor_bottom = 0.888889
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "111111"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Health" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
max_value = 66.0
value = 11.0
nine_patch_stretch = true
texture_under = ExtResource("3_4lvai")
texture_over = ExtResource("4_2ydvr")
texture_progress = ExtResource("5_72kik")

[node name="HealthLabel" type="Label" parent="Health"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "12/23"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Border" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2ydvr")
expand_mode = 4
stretch_mode = 5
